// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Does not double import React + JSX 1`] = `
"import React, { Component, PropTypes } from 'react';

class MyElement extends Component {
  static propTypes = {
    name: PropTypes.string.isRequired
  };

  render() {
    return React.createElement(\\"div\\", null, this.props.name);
  }

}"
`;

exports[`Imports Promise 1`] = `
"import _Promise from \\"promise\\";

_Promise.resolve(foo).then(console.log);"
`;

exports[`Imports React + JSX 1`] = `
"import { Component as _Component } from \\"react\\";
import _React from \\"react\\";
import { PropTypes as _PropTypes } from \\"react\\";

class MyElement extends _Component {
  static propTypes = {
    name: _PropTypes.string.isRequired
  };

  render() {
    return _React.createElement(\\"div\\", null, this.props.name);
  }

}"
`;

exports[`Imports React 1`] = `
"import { Component as _Component } from \\"react\\";
import { PropTypes as _PropTypes } from \\"react\\";

class MyElement extends _Component {
  static propTypes = {
    name: _PropTypes.string.isRequired
  };

  render() {
    return <div>{this.props.name}</div>;
  }

}"
`;

exports[`JSX Elements 1`] = `
"import _React12 from \\"react\\";
import _React11 from \\"react\\";
import { Match as _Match3 } from \\"react-router\\";
import _React10 from \\"react\\";
import { Match as _Match2 } from \\"react-router\\";
import _React9 from \\"react\\";
import { Match as _Match } from \\"react-router\\";
import _React8 from \\"react\\";
import _React7 from \\"react\\";
import _React6 from \\"react\\";
import _React5 from \\"react\\";
import _React4 from \\"react\\";
import _React3 from \\"react\\";
import _React2 from \\"react\\";
import _React from \\"react\\";

const element = _React12.createElement(\\"div\\", null, _React7.createElement(\\"ul\\", null, _React2.createElement(\\"li\\", null, _React.createElement(Link, {
  to: \\"/\\"
}, \\"Home\\")), _React4.createElement(\\"li\\", null, _React3.createElement(Link, {
  to: \\"/about\\"
}, \\"About\\")), _React6.createElement(\\"li\\", null, _React5.createElement(Link, {
  to: \\"/topics\\"
}, \\"Topics\\"))), _React8.createElement(\\"hr\\", null), _React9.createElement(_Match, {
  exactly: true,
  pattern: \\"/\\",
  component: Home
}), _React10.createElement(_Match2, {
  pattern: \\"/about\\",
  component: About
}), _React11.createElement(_Match3, {
  pattern: \\"/topics\\",
  component: Topics
}));"
`;

exports[`Still imports Promise when we use transform runtime after 1`] = `
"import _Promise from \\"promise\\";

_Promise.resolve(foo).then(console.log);"
`;

exports[`Still imports Promise when we use transform runtime first 1`] = `
"import _Promise from \\"promise\\";

_Promise.resolve(foo).then(console.log);"
`;
